# fwam2025

./: .clang-format  .gitignore  CMakeLists.txt  bessel.py  environment.yml  fast-python solution.ipynb  fast-python.ipynb  main.cpp  readme.md  requirements.txt
include/: cheb.h
python/: exercise.ipynb  presentation.ipynb  solution.ipynb
